# herdr-web

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  capacitor.config.ts  package-lock.json  package.json
.github/workflows/: check.yml
.specs/: agent-activity-state-efficiency.md
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
bridge/: Cargo.toml
bridge/src/: agent_activity.rs  agent_pins.rs  ipc.rs  logging.rs  main.rs  notes.rs  protocol.rs  server.rs  session.rs  snapshot_cache.rs  web_bridge.rs  workspace.rs
bridge/src/api/: client.rs  mod.rs  status.rs
bridge/src/protocol/: wire.rs
bridge/src/server/: socket_paths.rs
docs/: agent-activity-efficiency-design.md  agent-activity-efficiency.md  android.md  packaging.md  release.md  tarball-readme.md  vendoring.md
scripts/: check-vendor.sh  package-tarball.sh  release.mjs  run-bridge.sh  start-bg.sh  stop-bg.sh
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: App.test.ts  App.tsx  BackendSettingsDialog.tsx  LaunchDialog.tsx  NoteEditor.test.tsx  NoteMarkdownPreview.tsx  TerminalView.tsx  activity.test.ts  activity.ts  agentActivity.test.ts  agentActivity.ts  agentPins.test.ts  agentPins.ts  bridge.test.ts  bridge.tsx  commands.test.ts  commands.ts  connectionState.ts  fetchWithTimeout.test.ts  fetchWithTimeout.ts  launch.test.ts  launch.ts  localEcho.ts  main.tsx  mobileCommandTextarea.test.ts  mobileCommandTextarea.ts  mobileTerminalPrefs.test.ts  mobileTerminalPrefs.ts  native.ts  notes.ts  (+22 more)
(+5 files in other folders)
