[package]
name = "herdr-web-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "herdr-web-bridge"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
herdr-compat = { path = "../vendor/herdr-compat" }
libc = "0.2"
png = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
